feat: 添加科室、机构接口 swagger注释
